# fastapi-rides-system

./: .gitignore  README.md  main.py  pyproject.toml
admins/: admin.py
migrations/: env.py
migrations/versions/: 1566b5a95689_изменение_снова_в_колонке_местоположение.py  2be662525f23_миграция.py  61f9dbf02a58_еще_один_тест_миграции.py  685fb8adb198_добавление_ячейки_username.py  6bccdc6b3ae4_изменение_в_path_end.py  86dd6a65fcb2_первая_миграция.py  87ffd21c7541_создание_таблицы_обьявление.py  a15898600c15_добавление_валидатора_в_модель_клиента.py  b031f75ea2dd_редактирование_в_userread.py  d7403c102174_изменения_в_паролях.py
models/: client.py  driver.py  model_base.py  token.py
routes/: client.py  driver.py
