[project]
name = "ridesapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "geoalchemy2>=0.19.0",
    "geopy>=2.4.1",
    "itsdangerous>=2.2.0",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "shapely>=2.1.2",
    "sqladmin>=0.24.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]
